# langscore-divisi

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_linux.sh  deserializer.cpp  deserializer.h  divisi.cpp  divisi.h  divisi.pro  divisi.sln  divisi.vcxproj  divisi.vcxproj.filters  setup.bat  utility.hpp
example/: CMakeLists.txt  main.cpp
exec/: CMakeLists.txt  main.cpp  version.rc.in  versioninfo.h.in
include/: config.h  config_keys.h  config_writer.h  divisi.h
resource/: Langscore.js  Langscore_ObserverBridge.js  langscore.rb  lscsv.js  lscsv.py  lscsv.rb  unison.rb  vocab.csv
rvcnv/: build.bat  build.ps1  generate_hash.rb  internal_modules.rb  rvcnv.rb  rvcnv_hash.cpp
src/: CMakeLists.txt  config.cpp  config_writer.cpp  deserializer.cpp  deserializer.h  divisi.cpp  errorstatus.hpp  invoker.cpp  invoker.h  project_deserializer.cpp  project_deserializer.h  scripttextparser.hpp  serialize_base.h  utility.hpp
src/converter/: to_patch_csv.cpp  to_patch_csv.h
src/platform/: divisi_mvmz.cpp  divisi_mvmz.h  divisi_vxace.cpp  divisi_vxace.h  platform_base.cpp  platform_base.h
src/reader/: csvreader.cpp  csvreader.h  javascriptreader.hpp  jsonreader.hpp  mvmzjsonreader.hpp  readerbase.cpp  readerbase.h  rubyreader.hpp  speciftranstext.hpp  treesitter_wrapper.hpp  vxacejsonreader.hpp
src/writer/: csvwriter.cpp  csvwriter.h  graphiccsvwriter.hpp  jsonwriter.cpp  jsonwriter.h  jsscriptwriter.cpp  jsscriptwriter.h  langscore_custom_rb_writer.cpp  langscore_custom_rb_writer.h  marshal_replacer.cpp  marshal_replacer.h  rbscriptwriter.cpp  rbscriptwriter.h  scriptRegex.hpp  scripttextparser.hpp  uniquerowcsvwriter.hpp  writerbase.cpp  writerbase.h
test/: CMakeLists.txt  compress_data.ps1  decompress_data.ps1  prepare_test.py  run_test.py  test.h  test_base.cpp  test_config.h  test_config.h.in  test_main.cpp  test_mvmz.cpp  test_validation.cpp  test_vxace.cpp  test_writer.cpp
test/data/: chstring.rb  detectstring.rb  langscore.rb
test/data/csv/: add_lang.csv  after.csv  before.csv  parsePlain.csv  plaincsvreader.csv
test/data/ソポァゼゾタダＡボマミ/Data/: Map001.rvdata2  MapInfos.rvdata2  Scripts.rvdata2  Scripts_backup.rvdata2  System.rvdata2  Weapons.rvdata2
test/data/ソポァゼゾタダＡボマミ_langscore/: config.json
test/divisi_ct/: run_divisi_test.py
test/internal/: decompress.rb  test_core.py
test/js_test/: lscsv.test.js  package-lock.json  package.json
test/lscsv/: lscsv.test.js  lscsv_test.py  lscsv_test.rb  package.json  run_lscsv_test.ps1
test/plugin/: Langscore_mvmz.test.js  Langscore_vxace_test.rb  Langscore_vxace_test_prepare.rb  package-lock.json  package.json  run_mv_test.sh  run_mz_test.sh  run_rvcnv_test.py  run_test.py  run_vxace_test.ps1  start-http-server.sh  stop-http-server.sh
test/plugin/data/Translate/: Actors.csv  Armors.csv  Classes.csv  CommonEvents.csv  Enemies.csv  Graphics.csv  Items.csv  Map001.csv  Map002.csv  Map003.csv  Scripts.csv  Skills.csv  States.csv  System.csv  Troops.csv  Weapons.csv
test/plugin/mv_test/: Langscore.test.js  convert.py  jest.setup.js
test/plugin/mv_test/js/plugins/: Langscore.js  Langscore_test.js
test/plugin/mz_test/: Langscore.test.js  package-lock.json
test/plugin/mz_test/js/plugins/: Langscore.js  Langscore_test.js
test/plugin/rvcnv_test/: extract_rvdata2.rb  extract_script.rb  run_test.py
test/plugin/vxace_test/: compress.rb  decompress.rb  test.rb  test_main.rb  test_prepare.rb
test/rbcnv_test/: run_test.bat
test/ruby_test/: Actors.rvdata2  Actors_csv.csv  Map001.rvdata2  Scripts.rvdata2  bom_csv.csv  test.rb  test1.csv  test_csv.csv  test_lscsv.rb  test_rvcnv.rb
test/rvcnv_test/: extract_rvdata2.rb  run_rvcnv_test.py
writer/: csvwriter.cpp  csvwriter.h  writerbase.cpp  writerbase.h
